// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInput > renders click 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_medium__bjgo2pd styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__bjgo2p3 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_18_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_1c_"
            aria-describedby="_r_1c_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_1c_"
                aria-expanded="true"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_dropdownVisible_true__1xo4j4b8 selectBar_size_medium__1xo4j4bb selectBar_state_neutral__1xo4j4be selectBar_undefined_compound_0__1xo4j4bg"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1xo4j4b3 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="dropdown__1hff1el1 styles__10e61c24"
              id="_r_1c_"
              role="dialog"
              style="--_1eslcyd0: -5px; --_1eslcyd1: 0px; --_1eslcyd2: rotate(180deg); --_1eslcyd4: translate3d(0px, 4px, 0); --_1eslcyd5: 0ms; --_1eslcyd6: translate3d(0px, 4px, 0); --_1eslcyd7: 100%; --_1hff1el0: 100%; opacity: 1;"
            >
              <div
                class="styles__10e61c22"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <div
                    class="dropdown__1hff1el2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                    id="select-dropdown"
                    role="listbox"
                  >
                    <div
                      class="dropdown__1hff1el8 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="kb"
                        aria-selected="false"
                        class="dropdown__1hff1elc dropdown__1hff1elb dropdown__1hff1ela dropdown_size_medium__1hff1elf"
                        data-testid="option-kb"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__xf61n40 styles_alignItems_normal_xxsmall__xf61n41 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          data-testid="option-stack-kb"
                        >
                          <div
                            class="dropdown__1hff1elq styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_space-between_xxsmall__xf61n477"
                          >
                            <span
                              class="dropdown__1hff1elp style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
                              style="--textAlign__1giziax0: left;"
                            >
                              KB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="mb"
                        aria-selected="false"
                        class="dropdown__1hff1elc dropdown__1hff1elb dropdown__1hff1ela dropdown_size_medium__1hff1elf"
                        data-testid="option-mb"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__xf61n40 styles_alignItems_normal_xxsmall__xf61n41 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          data-testid="option-stack-mb"
                        >
                          <div
                            class="dropdown__1hff1elq styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_space-between_xxsmall__xf61n477"
                          >
                            <span
                              class="dropdown__1hff1elp style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
                              style="--textAlign__1giziax0: left;"
                            >
                              MB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="gb"
                        aria-selected="false"
                        class="dropdown__1hff1elc dropdown__1hff1elb dropdown__1hff1ela dropdown_size_medium__1hff1elf"
                        data-testid="option-gb"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__xf61n40 styles_alignItems_normal_xxsmall__xf61n41 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          data-testid="option-stack-gb"
                        >
                          <div
                            class="dropdown__1hff1elq styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_space-between_xxsmall__xf61n477"
                          >
                            <span
                              class="dropdown__1hff1elp style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
                              style="--textAlign__1giziax0: left;"
                            >
                              GB
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_0_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_4_"
            aria-describedby="_r_4_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_4_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_6e_"
        />
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__bjgo2pc styles_disabled__bjgo2p7 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            disabled=""
            id="_r_6e_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
            value="1"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_6m_"
            aria-describedby="_r_6m_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_6m_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_disabled_true__1xo4j4b7 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4bm style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_28__1do42ls22"
                >
                  KB
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with disabled and placeHolder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_disabled__bjgo2p7 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            disabled=""
            id="_r_28_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_2c_"
            aria-describedby="_r_2c_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_2c_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_disabled_true__1xo4j4b7 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with dropdownAlign center 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_2i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_2m_"
            aria-describedby="_r_2m_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_2m_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error  and success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_error__bjgo2p8 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-describedby="_r_3l_"
            aria-invalid="true"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_3k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_3o_"
            aria-describedby="_r_3o_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_3o_"
                aria-describedby="_r_3l_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_3l_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_error__bjgo2p8 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-describedby="_r_39_"
            aria-invalid="true"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_38_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_3c_"
            aria-describedby="_r_3c_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_3c_"
                aria-describedby="_r_39_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_39_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_5i_"
        >
          label
        </label>
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__bjgo2pc styles_disabled__bjgo2p7 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            disabled=""
            id="_r_5i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_5q_"
            aria-describedby="_r_5q_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_5q_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_disabled_true__1xo4j4b7 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and no label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_56_"
      >
        label
      </label>
      <div
        class="styles_large__bjgo2pc styles_disabled__bjgo2p7 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            disabled=""
            id="_r_56_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_5c_"
            aria-describedby="_r_5c_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_5c_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_disabled_true__1xo4j4b7 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_a_"
            max="100"
            min="10"
            name="-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input--unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with no label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_60_"
        />
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__bjgo2pc styles_disabled__bjgo2p7 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            disabled=""
            id="_r_60_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_68_"
            aria-describedby="_r_68_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_68_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_disabled_true__1xo4j4b7 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_1u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_22_"
            aria-describedby="_r_22_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_22_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size medioum 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_medium__bjgo2pd styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__bjgo2p3 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_12_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_medium__1xo4j4bb selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1xo4j4b3 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_small__bjgo2pe styles_default__bjgo2p6 styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_small__bjgo2p4 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_o_"
            aria-describedby="_r_o_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_o_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_small__1xo4j4bc selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1xo4j4b3 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles_large__bjgo2pc styles_success__bjgo2pa styles__bjgo2p5 styles__1w3vbem0"
        style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
      >
        <div
          class="styles__bjgo2pb"
          id="input-field"
        >
          <input
            aria-describedby="_r_2t_"
            aria-invalid="false"
            class="styles_large__bjgo2p2 styles__bjgo2p1"
            data-testid="unit-input"
            id="_r_2s_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__bjgo2pg styles__bjgo2pf styles__ei8oq30"
          style="--bjgo2p0: 12.6rem;"
        >
          <div
            aria-controls="_r_30_"
            aria-describedby="_r_30_"
            class="styles__10e61c29 styles_fullWidth_true__10e61c2b"
            tabindex="-1"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <div
                aria-controls="_r_30_"
                aria-describedby="_r_2t_"
                aria-expanded="false"
                class="selectBar__1xo4j4b6 selectBar__1xo4j4b5 selectBar_size_large__1xo4j4ba selectBar_state_neutral__1xo4j4be"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1xo4j4b4 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1xo4j4b2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
        id="_r_2t_"
        role="status"
      >
        text
      </span>
    </div>
  </div>
</DocumentFragment>
`;
